force-app/main/default/objects/Replacement_Order__c/Replacement_Order__c.object-meta.xml
<CustomObject>
    <label>Replacement Order</label>
    <nameField>
        <displayFormat>RO-{0000}</displayFormat>
        <label>Replacement Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Replacement Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>