force-app/main/default/objects/Replacement_Order__c/fields/Date_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped__c</fullName>
    <label>Date Shipped</label>
    <type>Date</type>
</CustomField>