force-app/main/default/objects/Replacement_Order__c/fields/Id_Account__c.field-meta.xml
<CustomField>
    <fullName>Id_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Replacement Orders</relationshipLabel>
    <relationshipName>Replacement_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>