force-app/main/default/objects/Replacement_Order__c/fields/Id_Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Id_Additional_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Additional Charges</label>
    <referenceTo>Additional_Charges__c</referenceTo>
    <relationshipLabel>Replacement Orders</relationshipLabel>
    <relationshipName>Replacement_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>