force-app/main/default/objects/Replacement_Order__c/fields/Id_Asset__c.field-meta.xml
<CustomField>
    <fullName>Id_Asset__c</fullName>
    <label>Id Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Replacement Orders</relationshipLabel>
    <relationshipName>Replacement_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>