force-app/main/default/objects/Replacement_Order__c/fields/Id_List_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Product_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id List Product Price</label>
    <referenceTo>List_Product_Price__c</referenceTo>
    <relationshipLabel>Replacement Orders</relationshipLabel>
    <relationshipName>Replacement_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>