force-app/main/default/objects/Replacement_Order__c/fields/Id_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Replacement Orders</relationshipLabel>
    <relationshipName>Replacement_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>