force-app/main/default/objects/Replacement_Order__c/fields/IsBatchProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsBatchProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBatchProcessed</label>
    <type>Checkbox</type>
</CustomField>