force-app/main/default/objects/Replacement_Order__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Damaged by Restaurant</fullName>
            </value>
            <value>
                <fullName>3G Upgrade</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>liveLink No Warranty</fullName>
                <isActive>false</isActive>
                <label>liveLink No Warranty</label>
            </value>
            <value>
                <fullName>liveLink Warranty</fullName>
                <isActive>false</isActive>
                <label>liveLink Warranty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>