force-app/main/default/objects/Replacement_Order__c/fields/Replacement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Notes__c</fullName>
    <label>Replacement Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>