force-app/main/default/objects/Replacement_Order__c/fields/Replacement_Product__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Product__c</fullName>
    <formula>Id_List_Product_Price__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement Product</label>
    <type>Text</type>
</CustomField>