force-app/main/default/objects/Replacement_Order__c/fields/Sim_Activated__c.field-meta.xml
<CustomField>
    <fullName>Sim_Activated__c</fullName>
    <description>SFS-5569</description>
    <label>Sim Activated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>