force-app/main/default/objects/Replacement_Order__c/fields/SIM_Id__c.field-meta.xml
<CustomField>
    <fullName>SIM_Id__c</fullName>
    <description>SIM id of the replacement Item</description>
    <label>SIM Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>