force-app/main/default/objects/Replacement_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Shipment</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Transmission-Approved</fullName>
            </value>
            <value>
                <fullName>Transmission-Rejected</fullName>
            </value>
            <value>
                <fullName>BackOffice-Approved</fullName>
            </value>
            <value>
                <fullName>BackOffice-Rejected</fullName>
            </value>
            <value>
                <fullName>BackOffice-Pending</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Redeliver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>