force-app/main/default/objects/Replacement_Order__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>