force-app/main/default/objects/Replacement_Order__c/recordTypes/SE_Replacement_Order.recordType-meta.xml
<RecordType>
    <fullName>SE_Replacement_Order</fullName>
    <active>true</active>
    <label>SE Replacement Order</label>
</RecordType>