force-app/main/default/objects/Replacement_Order__c/recordTypes/UK_Replacement_Order.recordType-meta.xml
<RecordType>
    <fullName>UK_Replacement_Order</fullName>
    <active>true</active>
    <label>UK Replacement Order</label>
</RecordType>