force-app/main/default/objects/Replacement_Order__c/validationRules/Amount_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Status_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c,&apos;Transmission-Approved&apos;) ,  OR(ISBLANK( Amount__c ),Amount__c&lt;0.01 ),RecordType.DeveloperName=&apos;UK_Replacement_Order&apos;)</errorConditionFormula>
    <errorMessage>Amount should have some value greater or equal to 0.01</errorMessage>
</ValidationRule>