force-app/main/default/objects/Replacement_Order__c/listViews/all_approved_free_replacement.listView-meta.xml
<ListView>
    <fullName>all_approved_free_replacement</fullName>
    <columns>NAME</columns>
    <columns>Replacement_Product__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Id_Account__c</columns>
    <columns>Id_Asset__c</columns>
    <columns>Id_Opportunity__c</columns>
    <columns>Serial_No__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent,BackOffice-Approved,Activated,Redeliver</value>
    </filters>
    <filters>
        <field>Amount__c</field>
        <operation>lessThan</operation>
        <value>GBP 1</value>
    </filters>
    <filters>
        <field>Id_Account__c</field>
        <operation>notContain</operation>
        <value>test,training</value>
    </filters>
    <label>all approved free replacement</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>UK_Management</roleAndSubordinates>
    </sharedTo>
</ListView>