force-app/main/default/objects/Replacement_Order__c/listViews/X01_New.listView-meta.xml
<ListView>
    <fullName>X01_New</fullName>
    <columns>NAME</columns>
    <columns>Replacement_Product__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Id_Account__c</columns>
    <columns>Id_Asset__c</columns>
    <columns>Id_Opportunity__c</columns>
    <columns>Serial_No__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>01.New</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>UK_Management</roleAndSubordinates>
    </sharedTo>
</ListView>