force-app/main/default/objects/Replacement_Order__c/listViews/X03_Transmissions_Rejected.listView-meta.xml
<ListView>
    <fullName>X03_Transmissions_Rejected</fullName>
    <columns>Id_Asset__c</columns>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Transmission-Rejected</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Replacement_Order__c.UK_Replacement_Order</value>
    </filters>
    <label>03.Transmissions Rejected</label>
    <language>en_US</language>
    <sharedTo>
        <role>UK_Customer_Care_Management</role>
        <role>UK_Customer_Care_Team</role>
    </sharedTo>
</ListView>